--- a/src/index.scss
+++ b/src/index.scss
@@ -15,6 +15,8 @@ body{
     outline: none;
     background:var(--bg-1);
     -webkit-font-smoothing:antialiased;
+    scrollbar-width: 0;
+    
     font-family: 'Vazir';
     direction: rtl ;
 }
