--- a/src/styles/components/card.scss
+++ b/src/styles/components/card.scss
@@ -1,8 +1,7 @@
 .scroll-snap-x {
-    scroll-snap-type: x proximity;
+    scroll-snap-type: x mandatory;
       
   }
   .scroll-snap-center {
     scroll-snap-align: center;
   }
-  
