--- a/src/styles/components/loading.scss
+++ b/src/styles/components/loading.scss
@@ -1,21 +1,18 @@
 /* HTML: <div class="loader"></div> */
 .loader {
   position: relative;
-  top:20rem;
-  right: 25%;
-  width: fit-content;
-  font-weight: bold;
-  font-family: monospace;
-  font-size: 30px;
-  clip-path: inset(0 3ch 0 0);
-  animation: l4 1s steps(4) infinite;
-  color: var(--black);
+  top:25rem;
+  right:45%;
+  transform: translateX(50% 50%);
+  width: 50px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: 
+    radial-gradient(farthest-side,var(--mainColor) 94%,#0000) top/8px 8px no-repeat,
+    conic-gradient(#0000 30%,var(--mainColor));
+  -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation: l13 1s infinite linear;
 }
-.loader:before {
-  content: "Loading...";
-}
-@keyframes l4 {
-  to {
-    clip-path: inset(0 -1ch 0 0);
-  }
+@keyframes l13{ 
+  100%{transform: rotate(1turn)}
 }
